fix!: remove portfolio of paths

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -19,11 +19,11 @@
     <div id="content">
         <header>
             <nav>
-                <a href="/portfolio/">Home</a>
+                <a href="/">Home</a>
 
                 <div class="link-pages">
-                    <a href="/portfolio/pages/projects/">Projects</a>
-                    <a class="button-fill" href="/portfolio/pages/contact/">Contact</a>
+                    <a href="/pages/projects/">Projects</a>
+                    <a class="button-fill" href="/pages/contact/">Contact</a>
                 </div>
             </nav>
         </header>
