--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div id="content">
         <header>
             <nav>
-                <a href="/portfolio/">Home</a>
+                <a href="/">Home</a>
 
                 <div class="link-pages">
-                    <a href="/portfolio/pages/projects/">Projects</a>
-                    <a class="button-fill" href="/portfolio/pages/contact/">Contact</a>
+                    <a href="/pages/projects/">Projects</a>
+                    <a class="button-fill" href="/pages/contact/">Contact</a>
                 </div>
             </nav>
         </header>
@@ -37,7 +37,7 @@
                         <p>
                             Hello There👋, i'm a software engineer based in Brazil and i build things for the web. Currently,  i'm focused on building accessible, efficient and scalable experiences. Bringing ideas to life with code.
                         </p>
-                        <a href="/portfolio/pages/contact/" class="button-fill">Contact Me</a>
+                        <a href="/pages/contact/" class="button-fill">Contact Me</a>
                         <!-- <button class="button-fill">My Resume</button> -->
                     </div>
 
@@ -113,7 +113,7 @@
                 </div>
                 
                 <div class="link-wrapper">
-                    <a href="/portfolio/pages/projects/" class="button-fill">SEE ALL PROJECTS</a>
+                    <a href="/pages/projects/" class="button-fill">SEE ALL PROJECTS</a>
                 </div>
             </section>
 
